--- a/app/src/main/res/menu/color_menu.xml
+++ b/app/src/main/res/menu/color_menu.xml
@@ -1,12 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:id="@+id/group_colors"
-        android:checkableBehavior="single">
-        <item android:id="@+id/color_red"
-            android:title="@string/color_red"/>
-        <item android:id="@+id/color_blue"
-            android:title="@string/color_blue"/>
-        <item android:id="@+id/color_green"
-            android:title="@string/color_green"/>
+    <group android:id="@+id/group_colors">
+        <item android:id="@+id/color_clementine"
+            android:title="@string/color_clementine"/>
+        <item android:id="@+id/color_brownOrange"
+            android:title="@string/color_brownOrange"/>
+        <item android:id="@+id/color_brown"
+            android:title="@string/color_brown"/>
+        <item android:id="@+id/color_orange"
+            android:title="@string/color_orange"/>
         <item android:id="@+id/delete_all"
             android:icon="@drawable/delete"
             android:title="@string/description_delete_all"/>
