--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="brownOrange">#d14905</color>
     <color name="brown">#742903</color>
     <color name="lightOrange">#ffedc9</color>
+    <color name="whiteOrange"> #fff9eb</color>
 
 
 
