--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,11 +12,10 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <item name="android:actionBarStyle">@color/clementine</item>
         <!-- Customize your theme here. -->
     </style>
     <style name="MyActionBar" parent="@style/Widget.AppCompat.ActionBar">
-        <item name="colorPrimary">@color/red</item>
     </style>
 
 </resources>
